spring-ai-chat/.tanzu/config/httproute-spring-ai-chat.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/spring-ai-chat
  name: spring-ai-chat-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: spring-ai-chat
  rules:
  - backendRefs:
    - kind: Service
      name: spring-ai-chat
      port: 8080
